[gd_scene load_steps=8 format=3 uid="uid://ddv13e5aau0s1"]

[ext_resource type="Script" path="res://tscn/player.gd" id="1_kpc0b"]
[ext_resource type="Texture2D" uid="uid://j66gjyr0hx6y" path="res://graphics/character/character_single_1.png" id="3_rh3nb"]
[ext_resource type="AudioStream" uid="uid://pdblmslrl3wp" path="res://audio/12-Gauge-Pump-Action-Shotgun-Close-Gunshot-B-www.fesliyanstudios.com.mp3" id="3_tpm8f"]
[ext_resource type="AudioStream" uid="uid://b7438binsyuym" path="res://audio/light-switch-156813.mp3" id="4_lsy0g"]
[ext_resource type="AudioStream" uid="uid://cb2xrwd8jjuuu" path="res://audio/death_blood_splatter-105623.mp3" id="5_67vsv"]
[ext_resource type="AudioStream" uid="uid://bevyrxey10qlu" path="res://audio/1911-reload-6248.mp3" id="6_uabkv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h1dgm"]
radius = 21.0238

[node name="player" type="Area2D"]
script = ExtResource("1_kpc0b")

[node name="CharacterSingle1" type="Sprite2D" parent="."]
position = Vector2(-2.26955, 0.153221)
rotation = -0.123918
scale = Vector2(0.767208, 0.767208)
texture = ExtResource("3_rh3nb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-30, 2)
shape = SubResource("CircleShape2D_h1dgm")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25

[node name="laserStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="laserStartPositions"]
position = Vector2(53, 1)

[node name="shoot_sound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(53, 1)
stream = ExtResource("3_tpm8f")

[node name="nobullet" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_lsy0g")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-7, 8)
offset = Vector2(400, 150)
position_smoothing_enabled = true
rotation_smoothing_enabled = true

[node name="sound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-7, 8)
stream = ExtResource("5_67vsv")

[node name="reload" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="soundReload" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_uabkv")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="reload" to="." method="_on_reload_timeout"]
